--- a/src/sass/plugins/_fau-person.scss
+++ b/src/sass/plugins/_fau-person.scss
@@ -435,28 +435,39 @@
 		}
     }
 
-	div [itemprop="telephone"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 88.13 96.18" style="enable-background:new 0 0 88.13 96.18;" xml:space="preserve"><g><path d="M31.55,23.7c1.08,5.51-1.29,7.18-1.29,7.18l-6.93,4.35c-2.76,1.64-1.26,5.06-1.26,5.06c10.82,23.49,22.79,30.56,27.15,33.69c3.15,2.27,5.07,0.65,5.07,0.65l8.92-7.44c3.17-3.1,5.58-0.97,5.58-0.97l17.6,13.15c2.99,2.1,1.65,6.36-0.51,10.03c-2.13,3.63-13.7,8.29-24.75,6.3c-11.06-1.99-31.45-11.18-44.89-31.34C2.67,44.01,1.33,31.51,1.33,31.51c-5.75-18.52,9-28.38,9-28.38c11.61-7.32,17.04,0.48,17.04,0.48S30.47,18.18,31.55,23.7z"/></g></svg>');
-		background-size: 88%;
+	a[itemprop="telephone"]::before {
+		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 88.1 85.6" style="enable-background:new 0 0 88.1 85.6;" xml:space="preserve"><path d="M84,62.3c-7.5-4.8-14.4-7.7-21.3-8.9c-2.7-0.5-5.5,0.4-7.5,2.3l-4.3,4c-0.3,0.3-0.8,0.4-1.2,0.2c-4.9-2.8-9.5-6.3-13.6-10.4c-3.1-3.1-5.9-6.6-8.3-10.2c-0.3-0.4-0.2-1,0.1-1.3l4.6-4.9c1.9-2,2.7-4.8,2.3-7.5c-1.2-6.9-4.1-13.8-8.9-21.3c-2.1-3.4-6.2-4.9-10-3.7C12.6,1.4,9.2,3.5,5.9,6.5c-4,3.6-6.2,9-5.8,14.5c1,14.9,8.6,30.2,21.4,43.1c13.9,13.9,30.5,21.5,46.2,21.5c1.4,0,2.8-0.1,4.2-0.2c5.8-0.5,10.9-3.7,13.7-8.6c0.9-1.5,1.6-3.1,2.1-4.6C88.9,68.5,87.4,64.4,84,62.3z M83.3,70.9c-0.4,1.2-0.9,2.4-1.7,3.6c-2.1,3.5-5.9,5.9-10.1,6.3c-15.6,1.4-32.6-5.9-46.8-20c-12-12-19.2-26.3-20.1-40.1C4.4,16.6,6,12.6,9,9.9c2.8-2.5,5.6-4.3,8.4-5.1c0.4-0.1,0.7-0.2,1.1-0.2c1.4,0,2.8,0.7,3.5,2c4.4,6.9,7.1,13.4,8.2,19.6c0.2,1.3-0.2,2.6-1.1,3.6l-4.6,4.9c-1.8,1.9-2,4.8-0.6,7.1c2.6,3.9,5.6,7.6,8.9,10.9c4.4,4.4,9.3,8.2,14.6,11.2c2.1,1.2,4.8,0.9,6.7-0.8l4.3-4c1-0.9,2.3-1.3,3.6-1.1c6.3,1.1,12.7,3.8,19.6,8.2C83.1,67.2,83.9,69.1,83.3,70.9z"/></svg>');
+		//background-size: 88%;
 	}
 
-	div [itemprop="email"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 88.13 61.06" style="enable-background:new 0 0 88.13 61.06;" xml:space="preserve"><path d="M81.83,8.59L61.06,26.41L81.83,44.6l6.29,5.54V8.18c0-1.51-0.41-2.9-1.07-4.09C87.06,4.09,81.83,8.59,81.83,8.59z"/><path d="M86.8,57.35l-4.97-4.37L56.24,30.56l-4.31,3.68c-2.27,1.95-5.07,2.9-7.87,2.9s-5.57-0.94-7.87-2.9l-4.31-3.68L6.29,52.97l-4.97,4.37c1.48,2.23,4,3.71,6.86,3.71h71.76C82.81,61.06,85.32,59.58,86.8,57.35L86.8,57.35z"/><path d="M27.07,26.41L6.29,8.59l-5.22-4.5C0.41,5.29,0,6.67,0,8.18v41.92l6.29-5.51C6.29,44.6,27.07,26.41,27.07,26.41z"/><path d="M33.68,23.79c0.19,0.13,0.41,0.31,0.57,0.5l6.04,5.16c2.17,1.86,5.35,1.86,7.55,0l6.04-5.16c0.16-0.19,0.38-0.38,0.57-0.5l20.4-17.5l7.05-6.04C81.26,0.09,80.64,0,79.94,0H8.18C7.49,0,6.86,0.09,6.23,0.25l7.05,6.04C13.28,6.29,33.68,23.79,33.68,23.79z"/></svg>');
-	}
-
-	div [itemprop="faxNumber"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 90 87.41" style="enable-background:new 0 0 90 87.41;" xml:space="preserve"><path d="M80.83,72.82c0,3.55-2.88,6.43-6.43,6.43c-3.55,0-6.43-2.88-6.43-6.43c0-3.55,2.88-6.43,6.43-6.43C77.95,66.39,80.83,69.27,80.83,72.82 M90,80.99V29.56c0,0,0-6.43-6.43-6.43H72.58v20.41c0,6.43-6.43,6.43-6.43,6.43H23.85c-6.43,0-6.43-6.43-6.43-6.43V23.13H6.43c0,0-6.43,0-6.43,6.43v51.43c0,0,0,6.43,6.43,6.43h77.14C83.57,87.41,90,87.41,90,80.99"/><path d="M66.47,36.51V6.43c0,0,0-6.43-6.43-6.43H29.96c0,0-6.43,0-6.43,6.43v30.08c0,0,0,6.43,6.43,6.43h30.08C60.04,42.94,66.47,42.94,66.47,36.51"/></svg>');
+	a[itemprop="email"]::before {
+		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75.6 58.1" style="enable-background:new 0 0 75.6 58.1;" xml:space="preserve"><g><path d="M63.4,0h-51C5.5,0,0,5.5,0,12.3v33.5c0,6.8,5.5,12.3,12.3,12.3h50.9c6.8,0,12.3-5.5,12.3-12.3V12.3C75.7,5.5,70.2,0,63.4,0z M12.3,3.9h50.9c3.5,0,6.5,2.1,7.9,5.2l-29,21.7c-2.5,1.9-6,1.9-8.6,0.1L4.6,9.1C5.8,6,8.8,3.9,12.3,3.9z M71.8,45.9c0,4.7-3.8,8.4-8.4,8.4h-51c-4.7,0-8.4-3.8-8.4-8.4V13.5l27.4,20.6c1.9,1.5,4.3,2.1,6.6,2.1c2.3,0,4.7-0.8,6.7-2.2l27.3-20.5V45.9z"/></g></svg>');
 		background-size: 90%;
 	}
 
-	div [itemprop="telephone"].mobile::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 53.72 89.07" style="enable-background:new 0 0 53.72 89.07;" xml:space="preserve"><path d="M46.53,0H7.21C3.22,0,0,3.23,0,7.21v74.65c0,3.99,3.23,7.21,7.21,7.21h39.31c3.99,0,7.21-3.23,7.21-7.21V7.21C53.74,3.23,50.5,0,46.53,0z M26.87,84.45c-2.65,0-4.79-2.14-4.79-4.79s2.14-4.81,4.79-4.81s4.79,2.14,4.79,4.79S29.52,84.45,26.87,84.45z M46.27,70.69H7.47V8.73h38.8C46.27,8.73,46.27,70.69,46.27,70.69z"/></svg>');
-		background-size: 58%;
+	a[itemprop="faxNumber"]::before {
+		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 84.5 81" style="enable-background:new 0 0 84.5 81;" xml:space="preserve"><g><path d="M82.6,50.6H69.9V12.3c0-8.6-7.4-11.8-11.3-12.3c-0.1,0-0.2,0-0.3,0H13.7C5.9,0,0,6.1,0,18c0,1,0.8,1.9,1.9,1.9h12.7v30.7H1.9c-1,0-1.9,0.8-1.9,1.9v23.9C0,78.9,2,81,4.5,81h78.1c1,0,1.9-0.8,1.9-1.9c0,0,0,0,0,0V52.5C84.5,51.4,83.7,50.6,82.6,50.6C82.6,50.6,82.6,50.6,82.6,50.6z M3.8,14.6c0-5.5,4.1-10.9,9.9-10.9H52c-2.2,3.8-3.7,8-4.1,12.4H3.8C3.8,16.1,3.8,18.5,3.8,14.6z M18.3,19.9h31.2c1,0,1.8-0.7,1.9-1.7c0.3-3.7,2.3-14.2,6.9-14.4c1,0.2,7.9,1.5,7.9,8.5v38.3H18.3V19.9z M80.7,77.2H4.5c-0.4,0-0.8-0.3-0.8-0.8v-22h77V77.2z"/><path d="M30.7,65.8c0,1,0.8,1.9,1.9,1.9H69c1,0,1.9-0.8,1.9-1.9c0-1-0.8-1.9-1.9-1.9H32.6C31.6,63.9,30.7,64.7,30.7,65.8z"/><path d="M21.6,63.9h-6.7c-1,0-1.9,0.8-1.9,1.9c0,1,0.8,1.9,1.9,1.9h6.7c1,0,1.9-0.8,1.9-1.9C23.5,64.7,22.6,63.9,21.6,63.9z"/></g></svg>');
+		//background-size: 90%;
 	}
 
-	div [itemprop="url"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 77 76.67" style="enable-background:new 0 0 77 76.67;" xml:space="preserve"><g><path d="M69.5,76.67H47.9V54.71c0-0.3-0.2-0.5-0.5-0.5H29.6c-0.3,0-0.5,0.2-0.5,0.5v21.96H7.5c-4.1,0-7.5-3.4-7.5-7.5V35.95c0-2.6,1.1-5.1,2.9-7l0.1-0.1l29.9-26.6c3.1-3,8.2-3,11.3,0l29.9,26.7c1.9,1.8,2.9,4.4,2.9,7v33.22C77,73.37,73.7,76.67,69.5,76.67z"/></g></svg>');
-		background-size: 90%;
+	a[itemprop="telephone"].mobile::before {
+		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 55.6 81.5" style="enable-background:new 0 0 55.6 81.5;" xml:space="preserve"><path d="M48.3,0H7.2C3.2,0,0,3.2,0,7.2v67c0,4,3.2,7.2,7.2,7.2h41.1c4,0,7.2-3.2,7.2-7.2v-67C55.6,3.2,52.3,0,48.3,0z M51.6,74.2c0,1.8-1.5,3.2-3.2,3.2H7.2C5.5,77.5,4,76,4,74.2l0-7.8h47.6L51.6,74.2z M51.6,11.8L51.6,11.8l0,50.6H4V11.8V7.2C4,5.5,5.5,4,7.2,4h41.1c1.8,0,3.2,1.5,3.2,3.2V11.8z"/><circle cx="27.8" cy="71.9" r="3.2"/></svg>');
+		background-size: 66%;
+	}
+
+	a[itemprop="url"]::before {
+		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 69.3 75.6" style="enable-background:new 0 0 69.3 75.6;" xml:space="preserve"><g><path d="M4.6,75.6h19.5c1,0,1.9-0.8,1.9-1.9V49.2h17.3v24.6c0,1,0.8,1.9,1.9,1.9h19.5c2.6,0,4.7-2.1,4.7-4.7V33.9c0-2.1-0.8-4.1-2.3-5.6L39,1.6c-2.5-2.4-6.4-2.4-8.9,0L2.3,28.2C0.8,29.7,0,31.8,0,33.9v37.1C-0.1,73.5,2.1,75.6,4.6,75.6z M3.7,33.9c0-1.1,0.5-2.2,1.2-2.9L32.7,4.3c1-1,2.6-1,3.7,0L64.3,31c0.8,0.8,1.2,1.9,1.2,2.9v37.1c0,0.6-0.4,0.9-0.9,0.9H47V47.3c0-1-0.8-1.9-1.9-1.9h-21c-1,0-1.9,0.8-1.9,1.9v24.6H4.6c-0.6,0-0.9-0.4-0.9-0.9V33.9z"/></g></svg>');
+		background-size: 85%;
+	}
+
+	a[itemprop="telephone"]:before,
+	a[itemprop="telephone"].mobile:before,
+	a[itemprop="faxNumber"]:before,
+	a[itemprop="email"]:before,
+	a[itemprop="url"]:before {
+		width: 1.2rem;
+		height: 1.2rem;
+		background-position: bottom center;
 	}
 
 }
