--- a/src/sass/backend/editor-style/_gutenberg.scss
+++ b/src/sass/backend/editor-style/_gutenberg.scss
@@ -8,15 +8,25 @@ Backend CSS Settings for Block Editor (Gutenberg)
 	margin: 0 30px;
     }
     
-
-
     .edit-post-layout__metaboxes {
+	background-color: #ddd;
+    }
+    .edit-post-meta-boxes-area.is-advanced,
+    .edit-post-meta-boxes-area.is-normal {
 	background-color: #f0f0f1;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	margin: 0 30px;
+	
+	.postbox {
+	    margin: 10px;
+	}
     }
-    .edit-post-meta-boxes-area .postbox {
-	max-width: 1040px;
-	margin: 0 auto 10px;
+    .edit-post-meta-boxes-area.is-side {
+	.handle-order-higher,
+	.handle-order-lower {
+	//    display: none;
+	}
     }
+    
+
+
 }
